# Never-Judge

./: .gitignore  AI助手功能分析与规划.md  CMakeLists.txt  IDEMainWindow.cpp  IDEMainWindow.h  LICENSE  README.md  TODO.md  deepseekAPI.md  main.cpp  run.sh  新增和修改文件.md  项目功能设计文档.md
doc/: README-zh_cn.md  design.md  report.md
ide/: aiChat.cpp  aiChat.h  cmd.cpp  cmd.h  highlighter.cpp  highlighter.h  ide.cpp  language.cpp  language.h  lsp.cpp  lsp.h  project.cpp  project.h
oj/: web.cpp  web.h
res/: logo.txt  resource.qrc
res/qss/: aiAssistant.css  code.css  completion.css  fileTree.css  footer.css  menu.css  preview.css  window.css
res/script/: crawl.py  match.py  parser.py  personalization.py  problem_detail.py  submit.py  submit_response.py
res/setting/: settings.json
util/: file.cpp  file.h  script.cpp  script.h
web/: aiClient.cpp  aiClient.h  crawl.cpp  crawl.h  oj.cpp  oj.h  parse.cpp  parse.h  problemCrawler.cpp  problemCrawler.h
widgets/: aiAssistant.cpp  aiAssistant.h  code.cpp  code.h  fileTree.cpp  fileTree.h  footer.cpp  footer.h  icon.cpp  icon.h  iconNav.cpp  iconNav.h  menu.cpp  menu.h  ojPersonal.cpp  ojPersonal.h  preview.cpp  preview.h  setting.cpp  setting.h  terminal.cpp  terminal.h  window.cpp  window.h
